Attempt to escape brackets in FenceOverhaul Filename

--- a/mods/fence-overhaul.toml
+++ b/mods/fence-overhaul.toml
@@ -1,5 +1,5 @@
 name = "Fence Overhaul"
-filename = "[1.10.x]FenceOverhaul-1.2.1.jar"
+filename = "\[1.10.x\]FenceOverhaul-1.2.1.jar"
 side = "both"
 
 [download]
