Update illegal characters in Mystical Agriculture

--- a/mods/mystical-agriculture.toml
+++ b/mods/mystical-agriculture.toml
@@ -1,5 +1,5 @@
 name = "Mystical Agriculture"
-filename = "mysticalagriculture[1.10.2]-1.5.8.jar"
+filename = "mysticalagriculture%5B1.10.2%5D-1.5.8.jar"
 side = "both"
 
 [download]
