--- a/mods/openblocks-elevator.toml
+++ b/mods/openblocks-elevator.toml
@@ -1,5 +1,5 @@
 name = "OpenBlocks Elevator"
-filename = "ElevatorMod[V.1.3.0][MC.1.10.2].jar"
+filename = "ElevatorMod%5BV.1.3.0%5D%5BMC.1.10.2%5D.jar"
 side = "both"
 
 [download]
